Installs bootstrap and ebm

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Decentralizedtechnologies</title>
+  <title>Decentralized Technologies, SA.</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700">
 </head>
+
 <body>
-  <app-root></app-root>
+  <main class="site-wrapper" role="main">
+    <app-root></app-root>
+  </main>
 </body>
+
 </html>
